Updated the links to the Ketinkeres blog and changed some wording

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <img src="images/grumpy.jpg" alt="Brian Mituka" class="js-amplify" class="profilee" width = "400" height="400">
         </div>
         <div class="mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-8-tablet about-contentWrap">
-          <h4> A junior dev with Interest in Infosec, BlockChain tech and the decentralised web! ps: i am running a coin miner in the background!!!</h4>
+          <h4> A Software Dev with Interests in Infosec, BlockChain tech and the decentralised web! ps: i am running a coin miner in the background!!!</h4>
           
         </div>
         <div class="mdc-layout-grid__cell--span-2"></div>
@@ -125,8 +125,8 @@
             </svg>
           </div>
           <h3>Web Developer</h3>
-          <p>I am a web developer. I  use HTML, CSS, Javascript, Typescript, Python and Java. I also use frameworks such as Angular, tornado &amp;
-          Spark </p>
+          <p>I am a web developer. I  use HTML, CSS and Javascript. I also use frameworks such as Angular, VueJs &amp;
+          ReactJs </p>
         </div>
       </div>
       <div class="mdc-layout-grid__cell--span-2"></div>
@@ -291,7 +291,7 @@
 
         <div class="mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-8-tablet">
           <div class="card">
-            <a href="#" target="_blank">
+            <a href="https://ketinkerers.wordpress.com/" target="_blank">
               <div class="card-img" style='background-image: url("images/pise.jpg");'></div>
               <div class="card-content">
                 <h5>Setting up your raspberry pi</h5>
@@ -307,7 +307,7 @@
 
         <div class="mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-8-tablet">
           <div class="card">
-            <a href="#" target="_blank">
+            <a href="https://ketinkerers.wordpress.com/" target="_blank">
               <div class="card-img" style='background-image: url("images/terminal.png");'></div>
               <div class="card-content">
                 <h5>welcome to the command line!</h5>
@@ -318,7 +318,7 @@
 
         <div class="mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-8-tablet">
           <div class="card">
-            <a href="#" target="_blank">
+            <a href="https://ketinkerers.wordpress.com/" target="_blank">
               <div class="card-img" style='background-image: url("images/ssh.png");'></div>
               <div class="card-content">
                 <h5>How to access your raspberry via SSH</h5>
