Updated the email address

--- a/index.html
+++ b/index.html
@@ -349,9 +349,9 @@
     <div class="footer-content">
       <h1>Contact Me</h1>
       <p>Ping me for anything I may be able to help with! <br> I am always looking forward to new opportunities</p>
-      <a href="mailto:mitukab@gmail.com" class="text-link">
+      <a href="mailto:briannitletone@protonmail.com" class="text-link">
         <img src="images/mail.svg" alt="Email" width="16px">
-        mitukab@gmail.com
+        briannitletone@protonmail.com
       </a>
     </div>
   </div>
