Updated the projects sections and added some extra text

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <div class="mdc-layout-grid max-width">
         <div class="mdc-layout-grid__cell--span-2"></div>
         <div class="mdc-layout-grid__cell--span-8 mdc-layout-grid__cell--align-middle">
-          <h1 class="name">Hello, I am Brian Nitletone and I <span>❤</span> code! </h1>
+          <h1 class="name">Hello, I am Brian Nitletone and I <span>❤</span> code!. My friends call me Mots. </h1>
         </div>
         <div class="mdc-layout-grid__cell--span-2"></div>
       </div>
@@ -82,7 +82,11 @@
           <img src="images/grumpy.jpg" alt="Brian Mituka" class="js-amplify" class="profilee" width = "400" height="400">
         </div>
         <div class="mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-8-tablet about-contentWrap">
-          <h4> A junior dev with Interest in Infosec, BlockChain tech and the decentralised web! ps: i am running a coin miner in the background!!!</h4>
+          <h4> A junior dev with interests in Infosec, IOT, P2P, Open Source Software(I love free software!!!), Web Development and anything that runs JS.
+            I'm also currently trying to be a gopher. I like reading. I spend most of time in front of a laptop, trying to be a better developer. <br>
+            I obviously can't write everything here, I heard web pages should not be crowded with text! Want to learn more about me? Hit me up! <br>  
+          Before I forget, I also love Buzzwords!  
+          </h4>
           
         </div>
         <div class="mdc-layout-grid__cell--span-2"></div>
@@ -108,7 +112,8 @@
             </svg>
           </div>
           <h3>Mobile developer</h3>
-          <p>I am an experienced Android developer. I love writing simple, clean and elegant user <br> interfaces </p>
+          <p>I at times do mobile development on android. <br>  I've tried flutter and React-Native,  <br>
+            but me still thinks native is awesome. <br></p>
         </div>
       </div>
 
@@ -125,8 +130,8 @@
             </svg>
           </div>
           <h3>Web Developer</h3>
-          <p>I am a web developer. I  use HTML, CSS, Javascript, Typescript, Python and Java. I also use frameworks such as Angular, tornado &amp;
-          Spark </p>
+          <p> This is my primary role in the development world. I use CSS3, HTML5, javascript(Vue.js, Angular, Node.js, React), <br> but I've also done a bit of it in Java using Spark. <br>
+          Currently I'm mostly a front-end developer, but I'm slowly transitioning towards becoming a full-stack Developer. </p>
         </div>
       </div>
       <div class="mdc-layout-grid__cell--span-2"></div>
@@ -166,7 +171,9 @@
 
       <div class="mdc-layout-grid__cell--span-2"></div>
     </div>
+    
   </div>
+  
 
 
   <div id="work" class="work-wrapper">
@@ -184,14 +191,14 @@
 
       <div class="mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-8-tablet">
         <div class="card">
-          <a href="http://bit.ly/2qVYCAd" target="_blank">
-            <div class="card-img" style='background-image: url("images/book.JPG");'></div>
+          <a href="https://deacons.nouveta.tech" target="_blank">
+            <div class="card-img" style='background-image: url("images/deacons.png");'></div>
             <div class="card-content">
               <div class="card-tags">
-                <div class="card-tag text-sm">Android Mobile Native</div>
-                <div class="card-tag text-sm">reading</div>
+                <div class="card-tag text-sm">PHP Prestashop </div>
+                <div class="card-tag text-sm">e-commerce</div>
               </div>
-              <h4>Books App</h4>
+              <h4>Deacons e-commerce site</h4>
             </div>
           </a>
         </div>
@@ -221,13 +228,13 @@
       <div class="mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-8-tablet">
         <div class="card">
           <a href=" http://bit.ly/2qIr2Bj" target="_blank">
-            <div class="card-img" style='background-image: url("images/open.JPG");'></div>
+            <div class="card-img" style='background-image: url("images/ticketsoko.png");'></div>
             <div class="card-content">
               <div class="card-tags">
-                <div class="card-tag text-sm">Android</div>
-                <div class="card-tag text-sm">Mobile</div>
+                <div class="card-tag text-sm">Telegram</div>
+                <div class="card-tag text-sm">Bots</div>
               </div>
-              <h4>Open Github</h4>
+              <h4>Ticketsoko Bot</h4>
             </div>
           </a>
         </div>
@@ -269,7 +276,7 @@
     <div class="mdc-layout-grid max-width">
       <div class="mdc-layout-grid__cell--span-2"></div>
       <div class="mdc-layout-grid__cell--span-8">
-        <h2>Blog</h2>
+        <h2>Blog(WIP)</h2>
       </div>
       <div class="mdc-layout-grid__cell--span-2"></div>
     </div>
