Updated the bot link

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 
       <div class="mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-8-tablet">
         <div class="card">
-          <a href=" http://bit.ly/2qIr2Bj" target="_blank">
+          <a href="https://t.me/Ticketsoko_bot" target="_blank">
             <div class="card-img" style='background-image: url("images/ticketsoko.png");'></div>
             <div class="card-content">
               <div class="card-tags">
