updated my twitter link

--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
         <a target="_blank" href="https://www.facebook.com/brian.mituka" class="footer-icon">
           <img src="images/facebook.svg" alt="Facebook" class="footer-iconImg">
         </a>
-        <a target="_blank" href="https://twitter.com/its_mots" class="footer-icon">
+        <a target="_blank" href="https://twitter.com/BrianNitletone" class="footer-icon">
           <img src="images/twitter.svg" alt="Twitter" class="footer-iconImg">
         </a>
 
