--- a/index.html
+++ b/index.html
@@ -82,9 +82,10 @@
           <img src="images/grumpy.jpg" alt="Brian Mituka" class="js-amplify" class="profilee" width = "400" height="400">
         </div>
         <div class="mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-8-tablet about-contentWrap">
-          <h4> A junior dev with interests in Infosec, IOT, P2P, Open Source Software(I love free software!!!), Web Development and anything that runs JS.
-            I'm also currently trying to be a gopher. I like reading. I spend most of time in front of a laptop, trying to be a better developer. <br>
-            I obviously can't write everything here, I heard web pages should not be crowded with text! Want to learn more about me? Hit me up! <br>  
+          <h4> A senior backend engineer with interest Infosec, LLMs IOT, P2P, Open Source Software(I love free software!!!), Web Development and anything that involves computers.
+            I'm also currently trying to learn more about AIs and LLMs. I like reading. I spend most of time in front of a laptop, trying to be a better developer. I'm also an upcoming farmer
+            and love's spending any free weekends upcountry. <br>
+            I obviously can't write everything here, I heard web pages should not be crowded with text! Want to learn more about me? Hit me up! on mitukab@gmail.com <br>  
           Before I forget, I also love Buzzwords!  
           </h4>
           
@@ -129,12 +130,16 @@
               </g>
             </svg>
           </div>
-          <h3>Web Developer</h3>
-          <p> This is my primary role in the development world. I use CSS3, HTML5, javascript(Vue.js, Angular, Node.js, React), <br> but I've also done a bit of it in Java using Spark. <br>
-          Currently I'm mostly a front-end developer, but I'm slowly transitioning towards becoming a full-stack Developer. </p>
+          <h3>Backend Engineer</h3>
+          <p> I am a seasoned backend engineer with 5 years of industry experience, well-versed in a multitude of languages and frameworks. 
+            With expertise in Java, Quarkus, Go, Node.js, Springboot, Groovy/Grails, I have the ability to design and develop robust backend systems tailored to your specific needs.
+             Additionally, my proficiency extends to messaging systems, enabling efficient communication between different components  applications. 
+             I also possess strong skills in database management and tuning, ensuring optimal performance and scalability.
+              As a backend engineer, 
+            I bring a comprehensive skill set to the table, ready to elevate your organization to new heights. </p>
         </div>
       </div>
-      <div class="mdc-layout-grid__cell--span-2"></div>
+      <div class="mdc-layout-grid__cell--span-1"></div>
     </div>
     <div class="mdc-layout-grid max-width">
       <div class="mdc-layout-grid__cell--span-2"></div>
@@ -356,9 +361,9 @@
     <div class="footer-content">
       <h1>Contact Me</h1>
       <p>Ping me for anything I may be able to help with! <br> I am always looking forward to new opportunities</p>
-      <a href="mailto:briannitletone@protonmail.com" class="text-link">
+      <a href="mailto:mitukab@gmail.com" class="text-link">
         <img src="images/mail.svg" alt="Email" width="16px">
-        briannitletone@protonmail.com
+        mitukab@gmail.com
       </a>
     </div>
   </div>
@@ -375,7 +380,7 @@
         <a target="_blank" href="https://www.facebook.com/brian.mituka" class="footer-icon">
           <img src="images/facebook.svg" alt="Facebook" class="footer-iconImg">
         </a>
-        <a target="_blank" href="https://twitter.com/BrianNitletone" class="footer-icon">
+        <a target="_blank" href="https://twitter.com/brianmituka" class="footer-icon">
           <img src="images/twitter.svg" alt="Twitter" class="footer-iconImg">
         </a>
 
